- debug config to attach to running instance - auth demo app - restructure yelp camp app - lots of new yelp camp features

--- a/nodeHomework/yelpCamp/public/app.css
+++ b/nodeHomework/yelpCamp/public/app.css
@@ -2,3 +2,19 @@
     width: 30%;
     margin: 25px auto;
 }
+
+.img-thumbnail img {
+    width: 100%;
+}
+
+.img-thumbnail {
+    padding: 0;
+}
+
+.img-thumbnail .caption {
+    padding: 9px;
+}
+
+.delete-form {
+    display: inline;
+}
