--- a/nodeHomework/yelpCamp/views/campgrounds/index.ejs
+++ b/nodeHomework/yelpCamp/views/campgrounds/index.ejs
@@ -1,6 +1,7 @@
-<% include partials/header %>
+<% include ../partials/header %>
 
 <div class="container">
+    <p></p>
     <header class="jumbotron">
         <div class="container">
         <h1>Welcome to my homework camp</h1>
@@ -36,4 +37,4 @@
     </div>
 </div>
 
-<% include partials/footer %>
+<% include ../partials/footer %>
