--- a/nodeHomework/yelpCamp/views/partials/header.ejs
+++ b/nodeHomework/yelpCamp/views/partials/header.ejs
@@ -25,5 +25,12 @@
                     </div>
                 </div>
             </nav>
-            
-                
+
+            <div class="container-fluid">
+                <% if (error && error.length) { %>
+                <div class="alert alert-danger" role="alert"><%= error %></div>
+                <% } %>
+                <% if (success && success.length) { %>
+                <div class="alert alert-success" role="alert"><%= success %></div>
+                <% } %>
+            </div>
