--- a/nodeHomework/yelpCamp/views/campgrounds/edit.ejs
+++ b/nodeHomework/yelpCamp/views/campgrounds/edit.ejs
@@ -6,15 +6,32 @@
     </div>
 
     <div class="new-campground">
-        <form action="/campgrounds/<%= campground._id %>?_method=PUT" method="POST">
-            <div class="form-group">
-                <input class="form-control" type="text" name="campground[name]" placeholder="Campground name" value="<%= campground.name %>">
+        <form class="form-inline" action="/campgrounds/<%= campground._id %>?_method=PUT" method="POST">
+            <div class="form-group row">
+                <div class="col-lg-1"></div>
+                <div>
+                    <input class="form-control" type="text" name="campground[name]" placeholder="Campground name" value="<%= campground.name %>">
+                </div>
             </div>
-            <div class="form-group">
-                <input class="form-control" type="text" name="campground[image]" placeholder="Image URL" value="<%= campground.image %>">
+            <div class="form-group row">
+                <div class="col-lg-1"></div>
+                <div>
+                    <input class="form-control" type="text" name="campground[image]" placeholder="Image URL" value="<%= campground.image %>">
+                </div>
             </div>
-            <div class="form-group">
-                <input class="form-control" type="text" name="campground[description]" placeholder="Description" value="<%= campground.description %>">
+            <div class="form-group row">
+                <div class="col-lg-1"></div>
+                <div>
+                    <input class="form-control" type="text" name="campground[description]" placeholder="Description" value="<%= campground.description %>">
+                </div>
+            </div>
+            <div class="form-group row">
+                <div class="col-lg-1">
+                    <label for="campground-price">$</label>
+                </div>
+                <div>
+                    <input id="campground-price" class="form-control" type="number" name="campground[price]" placeholder="Nightly Rate" value="<%= campground.price %>" min="0" step="0.01">
+                </div>
             </div>
             <input type="hidden" name="id" value="<%= campground._id %>">
             <button class="btn btn-lg btn-primary btn-block">Save</button>
