--- a/nodeHomework/yelpCamp/views/campgrounds/show.ejs
+++ b/nodeHomework/yelpCamp/views/campgrounds/show.ejs
@@ -15,7 +15,7 @@
             <div class="img-thumbnail">
                 <img class="img-fluid" src="<%= campground.image %>">
                 <div class="caption">
-                    <h4 class="float-right">$9.00 / night</h4>
+                    <h4 class="float-right">$<%- parseFloat(campground.price).toFixed(2) %> / night</h4>
                     <h4><%= campground.name %></h4>
                     <p><%= campground.description %></p>
                     <em><p>Submitted by: <%= campground.creator.username %></p></em>
