--- a/nodeHomework/yelpCamp/views/home.ejs
+++ b/nodeHomework/yelpCamp/views/home.ejs
@@ -1,7 +1,42 @@
-<% include partials/header %>
+<!-- <% include partials/header %>
 
 <h1>Landing Page</h1>
 
 <a href="/campgrounds">View all campgrounds</a>
+
+<% include partials/footer %> -->
+
+
+<!DOCTYPE html>
+<html>
+    <head>
+        <title>Yelp Camp</title>
+        <link rel="stylesheet" type="text/css" href="/bootstrap/css/bootstrap.min.css">
+        <link rel="stylesheet" href="/home.css">
+        <script src="https://cdnjs.cloudflare.com/ajax/libs/modernizr/2.8.3/modernizr.min.js" type="text/javascript" async></script>
+    </head>
+    <body>
+
+    <div class="container-fluid">
+        <% if (error && error.length) { %>
+        <div class="alert alert-danger" role="alert"><%= error %></div>
+        <% } %>
+        <% if (success && success.length) { %>
+        <div class="alert alert-success" role="alert"><%= success %></div>
+        <% } %>
+    </div>
+
+    <div id="landing-header">
+        <h1>Welcome to YelpCamp!</h1>
+        <a href="/campgrounds" class="btn btn-lg btn-success">View All Campgrounds</a>
+    </div>
+
+    <ul class="slideshow">
+        <li></li>
+        <li></li>
+        <li></li>
+        <li></li>
+        <li></li>
+    </ul>
 
 <% include partials/footer %>
